# packetmancer

./: .gitignore  Cargo.toml  README.md  build.rs  readme.md  report.json
.github/workflows/: ci.yml
assets/: demo.cast
scripts/windows/: check_npcap.ps1  run.ps1
src/: engine.rs  lib.rs  main.rs
src/detectors/: mod.rs  tcp_health.rs
src/network/: flow.rs  mod.rs
tests/: golden_tcp_health.rs
tests/golden/: tiny_tcp_health.json
