# ===================================================================
# Filename:  Cargo.toml
#
# Descripción:  Archivo de configuración de Cargo.
# ===================================================================

[package]
name = "packetmancer"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "2.1.0"
clap = { version = "4.5.4", features = ["derive"] }
etherparse = "0.14.3"